# hse_ami_python_final_project

./: README.md  pyproject.toml
src/: bad_presentation.pptx  bad_presentation_v2.pptx  good_presentation.pptx
src/pptlint/: analyzer.py  cli.py  loader.py  report.py  utils.py
src/pptlint/rules/: base.py  font.py  list.py  slide_number.py  text_density.py  title_style.py
src/tests/: conftest.py  fakes.py  test_analyzer.py  test_base_rule.py  test_cli.py  test_font_rule.py  test_list_rule.py  test_loader.py  test_report.py  test_slide_number_rule.py  test_text_density_rule.py  test_title_style_rule.py  test_utils.py
